--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 <body>
     <div class="container">
         <!-- 标题图片区域 -->
-        <img src="hujiugame-qingfeng/image/logo.png" alt="氢风启动器" class="title-image">
+        <img src="image/logo.png" alt="氢风启动器" class="title-image">
         
         <h1>氢风启动器</h1>
         <p class="description">选择您的平台，下载最新版本的应用程序</p>
@@ -172,21 +172,21 @@
                 <!-- Windows端下载 -->
                 <div class="platform windows">
                     <div class="platform-icon">
-			<img src="hujiugame-qingfeng/image/download-window.png" alt="Windows" style="width:48px; height:48px;">
+			<img src="image/download-window.png" alt="Windows" style="width:48px; height:48px;">
                     </div>
                     <h3 class="platform-title">Windows 客户端</h3>
                     <p class="platform-desc">适用于 Windows 10/11 系统，提供完整功能体验</p>
-                    <a href="hujiugame-qingfeng/release/alpha.jar" class="download-btn">下载 Windows 版</a>
+                    <a href="release/alpha.jar" class="download-btn">下载 Windows 版</a>
                 </div>
                 
                 <!-- Android端下载 -->
                 <div class="platform android">
                     <div class="platform-icon">
-                        <img src="hujiugame-qingfeng/image/download-android.png" alt="Android" style="width:48px; height:48px;">
+                        <img src="image/download-android.png" alt="Android" style="width:48px; height:48px;">
                     </div>
                     <h3 class="platform-title">Android 客户端</h3>
                     <p class="platform-desc">适用于 Android 8.0 及以上版本，移动端最佳体验</p>
-                    <a href="hujiugame-qingfeng/release/alpha.apk" class="download-btn">下载 Android 版</a>
+                    <a href="release/alpha.apk" class="download-btn">下载 Android 版</a>
                 </div>
             </div>
         </div>
