--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 			<img src="image/download-window.png" alt="Windows" style="width:48px; height:48px;">
                     </div>
                     <h3 class="platform-title">Windows 客户端</h3>
-                    <p class="platform-desc">适用于 Windows 10/11 系统，提供完整功能体验</p>
+                    <p class="platform-desc">适用于 Windows 7+ 系统，提供完整功能体验</p>
                     <a href="release/alpha.jar" class="download-btn">下载 Windows 版</a>
                 </div>
                 
@@ -185,7 +185,7 @@
                         <img src="image/download-android.png" alt="Android" style="width:48px; height:48px;">
                     </div>
                     <h3 class="platform-title">Android 客户端</h3>
-                    <p class="platform-desc">适用于 Android 8.0 及以上版本，移动端最佳体验</p>
+                    <p class="platform-desc">适用于 Android 4.4 / API 19 及以上版本，移动端最佳体验</p>
                     <a href="release/alpha.apk" class="download-btn">下载 Android 版</a>
                 </div>
             </div>
