--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     </div>
                     <h3 class="platform-title">Windows 客户端</h3>
                     <p class="platform-desc">适用于 Windows 7+ 系统，提供完整功能体验</p>
-                    <a href="release/alpha.jar" class="download-btn" download="氢风启动器_Windows.jar">下载 Windows 版</a>
+                    <a href="release/qing-feng_setup_windows.exe" class="download-btn" download="qing-feng_setup_windows.jar">下载 Windows 版</a>
                 </div>
                 
                 <!-- Android端下载 -->
@@ -194,7 +194,7 @@
                     </div>
                     <h3 class="platform-title">Android 客户端</h3>
                     <p class="platform-desc">适用于 Android 4.4 / API 19 及以上版本，移动端最佳体验</p>
-                    <a href="release/alpha.apk" class="download-btn" download="氢风启动器_Android.apk">下载 Android 版</a>
+                    <a href="release/android-debug.apk" class="download-btn" download="qing-feng_setup_android.apk">下载 Android 版</a>
                 </div>
             </div>
         </div>
