--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                     </div>
                     <h3 class="platform-title">Android 客户端</h3>
                     <p class="platform-desc">适用于 Android 4.4 / API 19 及以上版本，移动端最佳体验</p>
-                    <a href="release/android-debug.apk" class="download-btn" download="qing-feng_setup_android.apk">下载 Android 版</a>
+                    <a href="release/qing-feng_setup_android.apk" class="download-btn" download="qing-feng_setup_android.apk">下载 Android 版</a>
                 </div>
             </div>
         </div>
