--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     </div>
                     <h3 class="platform-title">Windows 客户端</h3>
                     <p class="platform-desc">适用于 Windows 7+ 系统，提供完整功能体验</p>
-                    <a href="release/qing-feng_setup_windows.exe" class="download-btn" download="qing-feng_setup_windows.jar">下载 Windows 版</a>
+                    <a href="release/qing-feng_setup_windows.exe" class="download-btn" download="qing-feng_setup_windows.exe">下载 Windows 版</a>
                 </div>
                 
                 <!-- Android端下载 -->
