--- a/history_versions.html
+++ b/history_versions.html
@@ -340,7 +340,7 @@
         <a href="index.html" class="back-link">
             <span>←</span> 返回首页
         </a>
-        <div class="page-title">历史版本</div>
+        <div class="page-title">📜 历史版本</div>
     </div>
 
     <div id="versionsContainer" class="versions-container">
