--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=yes">
-    <title>氢风启动器 - 官网</title>
+    <title>氢风启动器 · 官网</title>
     <style>
         * {
             margin: 0;
